chore: finished implementation

--- a/Thesis/content/01_introduction.tex
+++ b/Thesis/content/01_introduction.tex
@@ -122,7 +122,7 @@ ActivityPub security concerns. Encryption, non-repudiation, confidentiality…..
 → No agreed-upon security mechanisms for ActivityPub. 
 → No encryption in scope of ActivityPub.
 Research Questions
-What are the implications of introducing DIDs to Mastodon and ActivityPub in terms of usability, discovery and human-readability?
+What are the implications of introducing DIDs to Mastodon and ActivityPub in terms of usability, and human readability?
 Can a DID-compliant ActivityPub protocol use DIDComm for its standard communication?
 Can DIDs allow ActivityPub to stop relying on the DNS for its server-to-server discovery?
 Can DIDComm allow ActivityPub to stop relying on transport-level security for its communication?
