--- a/Thesis/content/05_evaluation.tex
+++ b/Thesis/content/05_evaluation.tex
@@ -1,4 +1,5 @@
 \chapter{Evaluation}
 \label{cha:evaluation}
 
-The evaluation of the thesis should be described in this chapter
+As mentioned in the definitions section, Mastodon's full username includes the domain of the server and a locally-unique username. This type of username accomplishes the goals of human readability and uniqueness. In addition, they are resolvable using DNS and the well-known URIs.\\
+
