--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -109,8 +109,7 @@ TCP
 
 \begin{appendices}
 	\input{content/99_appendices/a01_listings}
-	% \input{content/99_appendices/a02_listings}
-	% \input{content/99_appendices/a03_listings}
+	\input{content/99_appendices/a03_installation_guide}
 \end{appendices}
 
 \end{document}
