--- a/Thesis/style/style.tex
+++ b/Thesis/style/style.tex
@@ -309,6 +309,26 @@
 	tabsize=2
 }
 
+\lstdefinestyle{CodeStyle}{
+	backgroundcolor=\color{codegray},
+	commentstyle=\color{black},
+	keywordstyle=\color{black},
+	numberstyle=\tiny\color{black},
+	stringstyle=\color{black},
+	% basicstyle=\ttfamily\scriptsize,
+	numbers=left,
+	stepnumber=1,
+	breakatwhitespace=false,
+	breaklines=true,
+	captionpos=b,
+	keepspaces=true,
+	numbersep=5pt,
+	showspaces=false,
+	showstringspaces=false,
+	showtabs=false,
+	tabsize=2
+}
+
 \lstdefinelanguage{Java}{
      keywords={},
      keywordstyle=\color{bluegrey}\bfseries,
